Refactor test configurations and update mapping strategies.
- Adjust mocked behaviors in `TestgruppeMappingStrategyTest` and `BrukerMappingStrategyTest` for accurate setup.
- Refactor `TestOpenSearchConfig` to reuse a static container with optimized environment settings.
- Add JVM arguments in `build.gradle` to address module access warnings.
- Ensure null-safe handling of tags in `TestgruppeMappingStrategy`.

#deploy-test-dolly-backend